non-dbgutil build [-Werror=unused-parameter], fdo#59819

Change-Id: I8eaa67bc2ab609bb6483cb307bf4bbc0ca654671